--- a/package.xml
+++ b/package.xml
@@ -2,7 +2,7 @@
 
 <package format="2">
   <name>xpp_hyq</name>
-  <version>1.0.9</version>
+  <version>1.0.10</version>
   <description>
     HyQ-robot specific functions for visualization in the  XPP Motion Framework.
     
@@ -16,17 +16,18 @@
     See also <a href="https://dls.iit.it">IIT</a>.  
   </description>
   
-  <author email="winklera@ethz.ch">Alexander W. Winkler</author>
+  <author>Alexander W. Winkler</author>
   <author email="depardo@ethz.ch">Diego Pardo.</author>
   <author email="carlos.mastalli@iit.it">Carlos Mastalli</author>
   <author email="ioannis@robots.ox.ac.uk">Ioannis Havoutis</author>
-  <maintainer email="winklera@ethz.ch">Alexander W. Winkler</maintainer>
+  <maintainer email="alexander.w.winkler@gmail.com">Alexander W. Winkler</maintainer>
   <license>BSD</license>
   
   <url type="website">http://github.com/leggedrobotics/xpp</url>
   <url type="bugtracker">http://github.com/leggedrobotics/xpp/issues</url>
   
   <buildtool_depend>catkin</buildtool_depend>
+  <depend>xacro</depend>
   <depend>roscpp</depend>
   <depend>xpp_vis</depend>
 </package>
