--- a/package.xml
+++ b/package.xml
@@ -2,7 +2,7 @@
 
 <package format="2">
   <name>xpp_quadrotor</name>
-  <version>1.0.9</version>
+  <version>1.0.10</version>
   <description>
     The URDF file for a quadrotor to be used with the xpp packages and a 
     simple rviz publisher of quadrotor tfs.
@@ -13,14 +13,15 @@
   </description>
   
   <author email="depardo@ethz.ch">Diego Pardo.</author>
-  <author email="winklera@ethz.ch">Alexander W. Winkler</author>
-  <maintainer email="winklera@ethz.ch">Alexander W. Winkler</maintainer>
+  <author>Alexander W. Winkler</author>
+  <maintainer email="alexander.w.winkler@gmail.com">Alexander W. Winkler</maintainer>
   <license>BSD</license>
   
   <url type="website">http://github.com/leggedrobotics/xpp</url>
   <url type="bugtracker">http://github.com/leggedrobotics/xpp/issues</url>
   
   <buildtool_depend>catkin</buildtool_depend>
+  <depend>xacro</depend>
   <depend>roscpp</depend>
   <depend>xpp_vis</depend>
 </package>
