--- a/package.xml
+++ b/package.xml
@@ -2,13 +2,13 @@
 
 <package format="2">
   <name>xpp_vis</name>
-  <version>1.0.9</version>
+  <version>1.0.10</version>
   <description>
     Visualization for the XPP Motion Framework.
   </description>
   
-  <author email="winklera@ethz.ch">Alexander W. Winkler</author>
-  <maintainer email="winklera@ethz.ch">Alexander W. Winkler</maintainer>
+  <author>Alexander W. Winkler</author>
+  <maintainer email="alexander.w.winkler@gmail.com">Alexander W. Winkler</maintainer>
   <license>BSD</license>
   
   <url type="website">http://github.com/leggedrobotics/xpp</url>
