--- a/package.xml
+++ b/package.xml
@@ -2,7 +2,7 @@
 
 <package format="2">
   <name>xpp_states</name>
-  <version>1.0.9</version>
+  <version>1.0.10</version>
   <description>
     Common definitions (positions, velocities, angular angles,
     angular rates) and robot definitions in Cartesian and joint state
@@ -10,8 +10,8 @@
     xpp_msgs.
   </description>
   
-  <author     email="winklera@ethz.ch">Alexander W. Winkler</author>
-  <maintainer email="winklera@ethz.ch">Alexander W. Winkler</maintainer>
+  <author>Alexander W. Winkler</author>
+  <maintainer email="alexander.w.winkler@gmail.com">Alexander W. Winkler</maintainer>
   <license>BSD</license>
   
   <url type="website">http://github.com/leggedrobotics/xpp</url>
