--- a/package.xml
+++ b/package.xml
@@ -2,7 +2,7 @@
 
 <package format="2">
   <name>xpp</name>
-  <version>1.0.9</version>
+  <version>1.0.10</version>
   <description>
     Visualization of motion-plans for legged robots. It draws support areas, 
     contact forces and motion trajectories in RVIZ and displays URDFs for 
@@ -12,8 +12,8 @@
     <a href="https://github.com/ethz-adrl/towr">towr</a>.  
   </description>
   
-  <author email="winklera@ethz.ch">Alexander W. Winkler</author>
-  <maintainer email="winklera@ethz.ch">Alexander W. Winkler</maintainer>
+  <author>Alexander W. Winkler</author>
+  <maintainer email="alexander.w.winkler@gmail.com">Alexander W. Winkler</maintainer>
   <license>BSD</license>
   
   <url type="website">http://github.com/leggedrobotics/xpp</url>
