--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.9-0": ["Tue Jul 10 2018", "Alexander W. Winkler", "winklera@ethz.ch"]}
+{"1.0.9-0": ["Tue Jul 10 2018", "Alexander W. Winkler", "winklera@ethz.ch"], "1.0.10-0": ["Fri Apr 05 2019", "Alexander W. Winkler", "alexander.w.winkler@gmail.com"]}
