--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = xpp_vis
-	base = c2517a97
-	trimbase = 
+	base = d0b5eab2
+	trimbase = c2517a97
 	parent = upstream
 	previous = 17a7f807
