--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = xpp_msgs
-	base = b5a40b58
-	trimbase = 
+	base = 76c88b90
+	trimbase = b5a40b58
 	parent = upstream
 	previous = 17a7f807
