--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = xpp_states
-	base = 21670fca
-	trimbase = 
+	base = 9f3f1bd9
+	trimbase = 21670fca
 	parent = upstream
 	previous = 17a7f807
