--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = robots/xpp_hyq
-	base = 83c3d46c
-	trimbase = 
+	base = a7571c39
+	trimbase = 83c3d46c
 	parent = upstream
 	previous = 17a7f807
