--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = xpp
-	base = 5357ba05
-	trimbase = 
+	base = 00fb7ff3
+	trimbase = 5357ba05
 	parent = upstream
 	previous = 17a7f807
