--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = robots/xpp_quadrotor
-	base = eae893d2
-	trimbase = 
+	base = a6c6d24a
+	trimbase = eae893d2
 	parent = upstream
 	previous = 17a7f807
