--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = xpp_examples
-	base = 29926cfa
-	trimbase = 
+	base = 94a3ab7d
+	trimbase = 29926cfa
 	parent = upstream
 	previous = 17a7f807
