--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = xpp_vis
-	base = 5d084075
-	trimbase = 
+	base = ca3ad194
+	trimbase = 5d084075
 	parent = upstream
 	previous = 17a7f807
