--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = xpp_msgs
-	base = cd283485
-	trimbase = 
+	base = 9ced508f
+	trimbase = cd283485
 	parent = upstream
 	previous = 17a7f807
