--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = xpp_states
-	base = d413986a
-	trimbase = 
+	base = 96d70408
+	trimbase = d413986a
 	parent = upstream
 	previous = 17a7f807
