--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = robots/xpp_hyq
-	base = 53c85532
-	trimbase = 
+	base = 59b68b7e
+	trimbase = 53c85532
 	parent = upstream
 	previous = 17a7f807
