--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = xpp
-	base = 14eebd52
-	trimbase = 
+	base = 97e5b973
+	trimbase = 14eebd52
 	parent = upstream
 	previous = 17a7f807
