--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = robots/xpp_quadrotor
 	base = 4a331359
-	trimbase = c296e43a
+	trimbase = 
 	parent = upstream
 	previous = 17a7f807
