--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = xpp_examples
-	base = 772d38e2
-	trimbase = 
+	base = 305c676f
+	trimbase = 772d38e2
 	parent = upstream
 	previous = 17a7f807
