--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = xpp_vis
-	base = 8b347aa9
-	trimbase = 
+	base = 5d06305c
+	trimbase = 8b347aa9
 	parent = upstream
 	previous = 17a7f807
