--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = xpp_msgs
-	base = 751d7371
-	trimbase = 
+	base = f1d22ef7
+	trimbase = 751d7371
 	parent = upstream
 	previous = 17a7f807
