--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = xpp_states
-	base = 0cc7e72c
-	trimbase = 
+	base = 43065b71
+	trimbase = 0cc7e72c
 	parent = upstream
 	previous = 17a7f807
