--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = robots/xpp_hyq
-	base = 5965ad08
-	trimbase = 
+	base = 7f58911c
+	trimbase = 5965ad08
 	parent = upstream
 	previous = 17a7f807
