--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = xpp
-	base = dc1fad6a
-	trimbase = 
+	base = c2045db8
+	trimbase = dc1fad6a
 	parent = upstream
 	previous = 17a7f807
