--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = robots/xpp_quadrotor
 	base = 28deb630
-	trimbase = cdbbc5d6
+	trimbase = 
 	parent = upstream
 	previous = 17a7f807
