--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = robots/xpp_quadrotor
-	base = dffba0d7
-	trimbase = 
+	base = 456707f0
+	trimbase = dffba0d7
 	parent = upstream
 	previous = 17a7f807
