--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = xpp_examples
-	base = 48d92ce1
-	trimbase = 
+	base = f3bc7c94
+	trimbase = 48d92ce1
 	parent = upstream
 	previous = 17a7f807
