--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = f5ba772e
-	trimbase = 
+	trim = xpp_vis
+	base = 3e4366e4
+	trimbase = f5ba772e
 	parent = upstream
 	previous = 17a7f807
