--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 12c7d329
-	trimbase = 
+	trim = xpp_msgs
+	base = 484e6318
+	trimbase = 12c7d329
 	parent = upstream
 	previous = 17a7f807
