--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 164a0ac2
-	trimbase = 
+	trim = xpp_states
+	base = 5b2ca708
+	trimbase = 164a0ac2
 	parent = upstream
 	previous = 17a7f807
