--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 03d01e68
-	trimbase = 
+	trim = robots/xpp_hyq
+	base = 0e1e2d07
+	trimbase = 03d01e68
 	parent = upstream
 	previous = 17a7f807
