--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 37c07b53
-	trimbase = 
+	trim = xpp
+	base = 00b75a5b
+	trimbase = 37c07b53
 	parent = upstream
 	previous = 17a7f807
