--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 2da9dae2
-	trimbase = 
+	trim = robots/xpp_quadrotor
+	base = a6fb97c9
+	trimbase = 2da9dae2
 	parent = upstream
 	previous = 17a7f807
