--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = d3c2aa77
-	trimbase = 
+	trim = xpp_examples
+	base = f4dc199a
+	trimbase = d3c2aa77
 	parent = upstream
 	previous = 17a7f807
