--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0e1e2d07
+	base = 831d433a
 	trimbase = 
 	parent = release/noetic/xpp_hyq
-	previous = 
+	previous = 0e1e2d07
