--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1de1c211
+	base = 92b4317a
 	trimbase = 
 	parent = debian/noetic/xpp_hyq
-	previous = 
+	previous = 1de1c211
