--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 47d1c075
+	base = 92816140
 	trimbase = 
 	parent = debian/noetic/xpp_vis
-	previous = 
+	previous = 47d1c075
