--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8a80dbec
+	base = 2a3f810c
 	trimbase = 
 	parent = debian/noetic/xpp_msgs
-	previous = 
+	previous = 8a80dbec
