--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f8f06b61
+	base = 5393cdb2
 	trimbase = 
 	parent = debian/noetic/xpp_quadrotor
-	previous = 
+	previous = f8f06b61
