--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5b2ca708
+	base = e6ae2840
 	trimbase = 
 	parent = release/noetic/xpp_states
-	previous = 
+	previous = 5b2ca708
