--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8cf1b46c
+	base = 6266b5d0
 	trimbase = 
 	parent = debian/noetic/xpp_states
-	previous = 
+	previous = 8cf1b46c
