--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f4dc199a
+	base = 608ce60e
 	trimbase = 
 	parent = release/noetic/xpp_examples
-	previous = 
+	previous = f4dc199a
