--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d11cefa9
+	base = 40538d44
 	trimbase = 
 	parent = debian/noetic/xpp_examples
-	previous = 
+	previous = d11cefa9
