--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 00b75a5b
+	base = 2cb99bce
 	trimbase = 
 	parent = release/noetic/xpp
-	previous = 
+	previous = 00b75a5b
