--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c2eb7784
+	base = 2995cb73
 	trimbase = 
 	parent = debian/noetic/xpp
-	previous = 
+	previous = c2eb7784
