--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 90c62336
+	base = 00014398
 	trimbase = 
 	parent = debian/noetic/xpp_hyq
-	previous = 
+	previous = 90c62336
