--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9b6cf946
+	base = 864864d4
 	trimbase = 
 	parent = debian/noetic/xpp_vis
-	previous = 
+	previous = 9b6cf946
