--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cc26a269
+	base = eea53ca5
 	trimbase = 
 	parent = debian/noetic/xpp_msgs
-	previous = 
+	previous = cc26a269
