--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2ed647c0
+	base = 3d5d72b9
 	trimbase = 
 	parent = debian/noetic/xpp_quadrotor
-	previous = 
+	previous = 2ed647c0
