--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a36a47b6
+	base = b84dced5
 	trimbase = 
 	parent = debian/noetic/xpp_states
-	previous = 
+	previous = a36a47b6
