--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a6d08f08
+	base = 7038205f
 	trimbase = 
 	parent = debian/noetic/xpp_examples
-	previous = 
+	previous = a6d08f08
