--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 80f03899
+	base = 2a981553
 	trimbase = 
 	parent = debian/noetic/xpp
-	previous = 
+	previous = 80f03899
