--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 578b254d
+	base = eae9b9d4
 	trimbase = 
 	parent = rpm/noetic/xpp_hyq
-	previous = 
+	previous = 578b254d
