--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3e4366e4
+	base = bc61da8c
 	trimbase = 
 	parent = release/noetic/xpp_vis
-	previous = 
+	previous = 3e4366e4
