--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3413a331
+	base = 619cab0f
 	trimbase = 
 	parent = rpm/noetic/xpp_vis
-	previous = 
+	previous = 3413a331
