--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 484e6318
+	base = b177006d
 	trimbase = 
 	parent = release/noetic/xpp_msgs
-	previous = 
+	previous = 484e6318
