--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b2ab1e39
+	base = 4d8e3b5a
 	trimbase = 
 	parent = rpm/noetic/xpp_msgs
-	previous = 
+	previous = b2ab1e39
