--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a6fb97c9
+	base = ce37d535
 	trimbase = 
 	parent = release/noetic/xpp_quadrotor
-	previous = 
+	previous = a6fb97c9
