--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 15cb9b38
+	base = def5c11b
 	trimbase = 
 	parent = rpm/noetic/xpp_quadrotor
-	previous = 
+	previous = 15cb9b38
