--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6d6716a0
+	base = 13524323
 	trimbase = 
 	parent = rpm/noetic/xpp_states
-	previous = 
+	previous = 6d6716a0
