--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 36cd2dad
+	base = f648f5f0
 	trimbase = 
 	parent = rpm/noetic/xpp_examples
-	previous = 
+	previous = 36cd2dad
